# lab3a

./: CMakeLists.txt  README.md  T1  T1.cpp  T2  T2.cpp  T2_Sphere.ppm  T3  T3.cpp  T4  T4.cpp  T5  T5.cpp  example1.ppm  example2.ppm  example3.ppm  main.cpp
classes/: Camera.h  Color.h  Light.h  Material.h  MaterialSolid.h  Ray.h  RayTrace.h  Ray_Trace.h  SavePPM.h  Sphere.h  Trace.h  Vec3.h  another_sphere.h  material_solid.h  sphereT3.h
